--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.5",
-    "i": "^0.3.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-github-login": "^1.0.3",
-    "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.1"
   },
@@ -24,10 +21,14 @@
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/use-sync-external-store": "^0.0.6",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
     "globals": "^15.9.0",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.42",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
